Ahora se ve mas lindo
Mejoras css y correccion de httml

--- a/index.html
+++ b/index.html
@@ -195,59 +195,59 @@
 			<div class="page-content">
 				<div class="product-container">
 					<h3>nombre</h3>
-					<img src="img/img carrusel/carrusel 1.jpg" />
+					<img src="img/img carrusel/carrusel 2.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
 				<div class="product-container">
 					<h3>nombre</h3>
 					<img src="img/img carrusel/carrusel 2.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
 				<div class="product-container">
 					<h3>nombre</h3>
 					<img src="img/img carrusel/carrusel 3.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
-			<div class="page-content">
+			
 				<div class="product-container">
 					<h3>nombre</h3>
-					<img src="img/img carrusel/carrusel 1.jpg" />
+					<img src="img/img carrusel/carrusel 3.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
 				<div class="product-container">
 					<h3>nombre</h3>
 					<img src="img/img carrusel/carrusel 2.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
 				<div class="product-container">
 					<h3>nombre</h3>
 					<img src="img/img carrusel/carrusel 3.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
-			<div class="page-content">
+			
 				<div class="product-container">
 					<h3>nombre</h3>
-					<img src="img/img carrusel/carrusel 1.jpg" />
+					<img src="img/img carrusel/carrusel 2.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
 				<div class="product-container">
 					<h3>nombre</h3>
 					<img src="img/img carrusel/carrusel 2.jpg" />
 					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
 				<div class="product-container">
-					<h3>nombre</h3>
+					<h3>Cream Caramel - Sweet seeds</h3>
 					<img src="img/img carrusel/carrusel 3.jpg" />
-					<h1>$50</h1>
-					<button class="button-add" onclick="add('product-1', 50)">Agregar</button>
+					<h1>$12990</h1>
+					<button class="button-add" onclick="add('product-1', 50)">Añadir al carrito</button>
 				</div>
 		
 				
