--- a/Tienda/index.html
+++ b/Tienda/index.html
@@ -254,27 +254,33 @@
 			</div>
 		
 	</main>
-	<footer>
-		<div class="contenedorfooter">
-			<div class="tiendas"> 
-				<h1>Nuestras Tiendas</h1>
-				<p>Quinta Normal</p>
-				<p>Independencia</p>
-			</div>
-			<div class="redes">
-				<h1>Nuestras redes sociales</h1>
-				<div class="facebook">
-					<img src="img/footer/fb.png">
-					<label>Siguenos en Facebook</label>
-				</div>
-				<div class="instagram">
-					<img src="img/footer/ig.png">
-					<label>Siguenos en Instagram</label>
-				</div>					
-			</div>
-			
-		</div>
-	</footer>
+	<footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="img/logoweb.png" alt="Logo de SLee Dw">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>Nuestras Tiendas</h2>
+                <p> Quinta Normal</p>
+                <p> Independencia</p>
+            </div>
+            <div class="box">
+
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2022 <b>Game of Grow</b> - Todos los Derechos Reservados.</small>
+        </div>
+    </footer>
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 	<script src="main.js"></script>
 </body>
