Implementacion bot inicial

--- a/Tienda/index.html
+++ b/Tienda/index.html
@@ -8,7 +8,7 @@
 	<title>Packfull</title>
 </head>
 <body>
-	
+	<script src="//code.tidio.co/kgrwftvqmeazvc7pdugad5ru34lldenv.js" async></script>
 	<nav class="menu" id="menu">
 		
 		<div class="contenedor contenedor-botones-menu">
