--- a/Tienda/index.html
+++ b/Tienda/index.html
@@ -8,7 +8,7 @@
 	<title>Packfull</title>
 </head>
 <body>
-	<script src="//code.tidio.co/kgrwftvqmeazvc7pdugad5ru34lldenv.js" async></script>
+	<script src="//code.tidio.co/bph8rdnd07sh34ipxdhqwsm7ohrrhfsd.js" async></script>
 	<nav class="menu" id="menu">
 		
 		<div class="contenedor contenedor-botones-menu">
@@ -157,13 +157,13 @@
 		<div class="carousel">
 			<div class="carousel_inner">
 			   <div class="carousel_item carousel_item__active">
-				  <img src="./img/img carrusel/imagenprincipal.jpg" alt="" class="carousel_img">
+				  <img src="./img/Logos/Logo_Packfull_large.png" alt="" class="carousel_img">
 			   </div>
 			   <div class="carousel_item">
-				  <img src="./img/img carrusel/carrusel 2.jpg" alt="" class="carousel_img">
+				  <img src="img/Productos/autoarmables.png" alt="" class="carousel_img">
 			   </div>
 			   <div class="carousel_item">
-				  <img src="./img/img carrusel/carrusel 4.jpg" alt="" class="carousel_img">
+				  <img src="img/Productos/caja autoarmable 2.png" alt="" class="carousel_img">
 			   </div>
 			</div>
 	  
